# face_recognition

./: .gitignore  README.md  facedetect.py  pyproject.toml  requirements.txt
Face_detection/: Face_detection.ino  app_httpd.cpp
firmware/Face_detection/: Face_detection.ino  app_httpd.cpp  camera_pins.h
python/: README.md  cute_gui.py  facedetect.py  log_config.json  logging_handlers.py  requirements.txt
src/: main.py
