[project]
name = "face-detection"
version = "0.0.1"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "websocket-client>=1.6.0",
    "dlib>=19.24.0",
    "setuptools>=65.6.3",
    "face-recognition>=1.3.0",
]

[tool.uv]
package = false
